crates/cli/tests/snapshots/run_test__run__env_vars__inherits_from_config.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output_standardized()
---

FROM_CONFIG = abc123
FROM_CONFIG_BOOL = true
FROM_PARENT = undefined
FROM_PARENT_REMOVED = undefined
