crates/cli/tests/snapshots/run_test__run__env_vars__supports_interpolation.snap
---
source: crates/cli/tests/run_test.rs
expression: assert.output_standardized()
---

FIRST = abc
SECOND = 789
THIRD = value-abc-789-xyz
FOURTH = ignores-$FIRST-$PARENT
